{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 14,
  "lineage": "38659bc3-233f-c648-5271-3df806fbe818",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-30T21:49:19.951-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "l7-xlb-fw-allow-hc",
            "name": "l7-xlb-fw-allow-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/original-fort-385609/global/networks/l7-xlb-network",
            "priority": 1000,
            "project": "original-fort-385609",
            "self_link": "https://www.googleapis.com/compute/v1/projects/original-fort-385609/global/firewalls/l7-xlb-fw-allow-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.160.41.65",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-05-30T21:48:52.721-07:00",
            "id": "l7-xlb-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "l7-xlb-static-ip",
            "prefix_length": 0,
            "project": "original-fort-385609",
            "self_link": "https://www.googleapis.com/compute/v1/projects/original-fort-385609/global/addresses/l7-xlb-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "l7-xlb-network",
            "name": "l7-xlb-network",
            "project": "original-fort-385609",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/original-fort-385609/global/networks/l7-xlb-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-30T21:49:21.119-07:00",
            "enable_flow_logs": false,
            "fingerprint": "2PCBJMmRq_I=",
            "gateway_address": "10.0.1.1",
            "id": "us-central1/l7-xlb-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "l7-xlb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/original-fort-385609/global/networks/l7-xlb-network",
            "private_ip_google_access": false,
            "project": "original-fort-385609",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/original-fort-385609/regions/us-central1/subnetworks/l7-xlb-subnet"
          },
          "dependencies": [
            "google_compute_network.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": []
    }
  ]
}